--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,11 +60,12 @@ ableton-hub = "src.main:main"
 [project.gui-scripts]
 ableton-hub-gui = "src.main:main"
 
+[tool.setuptools]
+include-package-data = true
+
 [tool.setuptools.packages.find]
 where = ["."]
 include = ["src", "src.*"]
-
-include_package_data = true
 
 [tool.black]
 line-length = 100
