--- a/.github/workflows/build_installers.yml
+++ b/.github/workflows/build_installers.yml
@@ -122,7 +122,23 @@ jobs:
         run: briefcase build macOS
 
       - name: Package as DMG
-        run: briefcase package macOS -p dmg --identity '${{ secrets.APP_IDENTITY }}'
+        run: briefcase package macOS -p dmg --identity '${{ secrets.APP_IDENTITY }}' --no-notarize
+
+      - name: Notarize DMG
+        env:
+          KEYCHAIN_PASSWORD: ${{ secrets.APP_CERT_PASSWORD }}
+        run: |
+          security unlock-keychain -p "$KEYCHAIN_PASSWORD" "$RUNNER_TEMP/signing.keychain-db"
+          DMG_PATH=$(ls dist/*.dmg | head -1)
+          xcrun notarytool submit "$DMG_PATH" \
+            --keychain-profile "AC_PASSWORD" \
+            --keychain "$RUNNER_TEMP/signing.keychain-db" \
+            --wait
+
+      - name: Staple notarization to DMG
+        run: |
+          DMG_PATH=$(ls dist/*.dmg | head -1)
+          xcrun stapler staple "$DMG_PATH"
 
       - name: Upload DMG artifact
         uses: actions/upload-artifact@v4
