--- a/.github/workflows/build_installers.yml
+++ b/.github/workflows/build_installers.yml
@@ -1,14 +1,21 @@
 name: Build Installers
 
 on:
-  # Manual trigger from GitHub Actions UI
   workflow_dispatch:
     inputs:
-      version:
-        description: "Version tag (e.g. v1.0.6)"
+      platforms:
+        description: "Platforms to build"
+        required: true
+        default: "all"
+        type: choice
+        options:
+          - all
+          - windows
+          - macos
+      ref:
+        description: "Branch, tag, or commit to build (e.g. main, v1.0.7)"
         required: false
         default: ""
-  # Auto-trigger on version tags
   push:
     tags:
       - "v*"
@@ -16,19 +23,28 @@ on:
 permissions:
   contents: write
 
+# Resolve which platforms to build (all on tag push; selected on manual dispatch)
+env:
+  BUILD_WINDOWS: ${{ github.event_name == 'push' || github.event.inputs.platforms == 'all' || github.event.inputs.platforms == 'windows' }}
+  BUILD_MACOS: ${{ github.event_name == 'push' || github.event.inputs.platforms == 'all' || github.event.inputs.platforms == 'macos' }}
+
 jobs:
   # ── Windows MSI ──────────────────────────────────────────────
   build-windows:
+    if: env.BUILD_WINDOWS == 'true'
     runs-on: windows-latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.inputs.ref || github.ref }}
 
       - name: Set up Python 3.11
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+          cache: "pip"
 
       - name: Install Briefcase
         run: pip install briefcase
@@ -51,6 +67,7 @@ jobs:
 
   # ── macOS DMG ────────────────────────────────────────────────
   build-macos:
+    if: env.BUILD_MACOS == 'true'
     runs-on: macos-latest
     env:
       APPLE_ID: ${{ secrets.APP_ID }}
@@ -60,6 +77,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.inputs.ref || github.ref }}
 
       - name: Import code signing certificate
         env:
@@ -91,6 +110,7 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.13"
+          cache: "pip"
 
       - name: Generate macOS .icns icon
         run: |
@@ -179,8 +199,9 @@ jobs:
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
+          # Globs match whatever artifacts exist (handles single-platform builds)
           files: |
-            AbletonHub-Windows-MSI/**/*.msi
-            AbletonHub-macOS-DMG/**/*.dmg
+            **/*.msi
+            **/*.dmg
           generate_release_notes: true
           draft: true
