--- a/pyproject.toml
+++ b/pyproject.toml
@@ -167,7 +167,7 @@ description = "Cross-platform desktop application for organizing Ableton project
 long_description = """Ableton Hub helps you organize, manage, and discover your \
 Ableton Live projects across multiple locations. Search, sort, tag, collect, \
 and preview your projects with advanced similarity analysis."""
-icon = "resources/icons/AProject.png"
+icon = "resources/icons/AProject"
 sources = ["src"]
 requires = [
     "PyQt6>=6.10.0",
